--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Book</title>
+    <title>genmetsu.</title>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"
@@ -18,7 +18,7 @@
   <body>
     <noscript>
       <strong
-        >We're sorry but test-vue doesn't work properly without JavaScript
+        >We're sorry but genmetsu doesn't work properly without JavaScript
         enabled. Please enable it to continue.</strong
       >
     </noscript>
