--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,38 @@
       src="https://polyfill.io/v3/polyfill.min.js?features=Object.assign%2CElement.prototype.append%2CNodeList.prototype.forEach%2CCustomEvent%2Csmoothscroll"
       crossorigin="anonymous"
     ></script>
+    <script id="vertexShader" type="x-shader/x-vertex">
+      varying vec2 vUv;
+      void main() {
+        vUv = uv;
+        gl_Position = projectionMatrix
+          * modelViewMatrix
+          * vec4( position, 1.0 );
+      }
+    </script>
+
+    <script id="fragmentShader" type="x-shader/x-fragment">
+      uniform float amount;
+      uniform sampler2D tDiffuse;
+      varying vec2 vUv;
+
+      float random( vec2 p )
+      {
+        vec2 K1 = vec2(
+          23.14069263277926, // e^pi (Gelfond's constant)
+          2.665144142690225 // 2^sqrt(2) (Gelfondâ€“Schneider constant)
+        );
+        return fract( cos( dot(p,K1) ) * 12345.6789 );
+      }
+
+      void main() {
+
+        vec4 color = texture2D( tDiffuse, vUv );
+        vec2 uvRandom = vUv;
+        uvRandom.y *= random(vec2(uvRandom.y,amount));
+        color.rgb += random(uvRandom)*0.12;
+        gl_FragColor = vec4( color  );
+      }
+    </script>
   </body>
 </html>
